After 4.9:
-----------
Import opera settings/addressbook